CMAKE_MINIMUM_REQUIRED ( VERSION 2.8 FATAL_ERROR )

SET ( PROJECT_NAME AntGraphics )
SET ( LIBRARY_NAME ${PROJECT_NAME} )

# project declaration
PROJECT( ${PROJECT_NAME} )

INCLUDE(GNUInstallDirs)

IF( CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT )
    set( CMAKE_INSTALL_PREFIX "./" CACHE PATH "default install path" FORCE )
ENDIF()

SET(CXX_DISABLE_WERROR TRUE)

LIST( APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMake )

#INCLUDE (CMake/pkg-config.cmake)

FIND_PACKAGE( OpenGL REQUIRED )
FIND_PACKAGE( assimp REQUIRED )
FIND_PACKAGE( GLFW3 REQUIRED )
FIND_PACKAGE( ANTTWEAKBAR REQUIRED )

INCLUDE_DIRECTORIES(include/)

#INCLUDE_DIRECTORIES(include/app)
INCLUDE_DIRECTORIES(include/app/abstract)

INCLUDE_DIRECTORIES(include/camera)
INCLUDE_DIRECTORIES(include/configuration)
INCLUDE_DIRECTORIES(include/environment)
INCLUDE_DIRECTORIES(include/gl)
INCLUDE_DIRECTORIES(include/gui)
INCLUDE_DIRECTORIES(include/light)
INCLUDE_DIRECTORIES(include/loader)

#INCLUDE_DIRECTORIES(include/log)

INCLUDE_DIRECTORIES(include/math)
INCLUDE_DIRECTORIES(include/midi)
INCLUDE_DIRECTORIES(include/primitives)
INCLUDE_DIRECTORIES(include/shader)
INCLUDE_DIRECTORIES(include/texture)
INCLUDE_DIRECTORIES(include/utils)
INCLUDE_DIRECTORIES(include/window)

INCLUDE_DIRECTORIES(externals/RtMidi)
INCLUDE_DIRECTORIES(externals/std_image)

INCLUDE_DIRECTORIES (
	${ASSIMP_INCLUDE_DIR}
	${GLFW3_INCLUDE_DIR}
	${ANTTWEAKBAR_INCLUDE_DIR}
)

FILE ( GLOB_RECURSE SOURCE_FILES src/* include/* )

ADD_LIBRARY ( 
	${LIBRARY_NAME} 	
	#dynamic library
	SHARED
	${SOURCE_FILES}	
)

TARGET_LINK_LIBRARIES ( 
  ${LIBRARY_NAME}
  ${OPENGL_LIBRARIES} 
  ${ASSIMP_LIBRARY}
  ${GLFW3_LIBRARY}
  ${ANTTWEAKBAR_LIBRARY}

)

MACRO( CONFIG_PROJECT PROJNAME LIBNAME )
    INCLUDE_DIRECTORIES( ${${LIBNAME}_INDLUDE_DIR} )
    TARGET_LINK_LIBRARIES( ${PROJNAME} ${${LIBNAME}_LIBRARY} )
ENDMACRO()

# Where to compile shared objects
SET ( LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib )
INSTALL( 
	FILES ${CMAKE_CURRENT_BINARY_DIR}/lib/libAntGraphics.dylib 
	DESTINATION $ENV{ABSTRACT_GRAPHICS_INSTALL_DIR}/AntGraphics/lib
)

INSTALL( 
	FILES ${SOURCE_FILES}
	DESTINATION $ENV{ABSTRACT_GRAPHICS_INSTALL_DIR}/AntGraphics/include
)


#SET ( APP_NAME ANT )

#ADD_EXECUTABLE(
#   ${APP_NAME}
#   main.cpp
#   ${SOURCE_FILES}	
#)
#SET( EXECUTABLE_OUTPUT_PATH ${CMAKE_INSTALL_BINDIR} )

#INSTALL(
#	FILES ${CMAKE_CURRENT_BINARY_DIR}/bin/ANT 
#	DESTINATION ${EXECUTABLE_OUTPUT_PATH}/${PROJECT_NAME}
#)


