CMAKE_MINIMUM_REQUIRED ( VERSION 2.8 FATAL_ERROR )

SET ( PROJECT_NAME antApp )

# project declaration
PROJECT( ${PROJECT_NAME} )

INCLUDE(GNUInstallDirs)

IF( CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT )
    set( CMAKE_INSTALL_PREFIX "./" CACHE PATH "default install path" FORCE )
ENDIF()

SET(CXX_DISABLE_WERROR TRUE)

LIST( APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/../../CMake )

FIND_PACKAGE( OpenGL REQUIRED )
FIND_PACKAGE( ASSIMP REQUIRED )
FIND_PACKAGE( GLFW3 REQUIRED )
FIND_PACKAGE( ANTTWEAKBAR REQUIRED )
FIND_PACKAGE( ANTGRAPHICS REQUIRED )


INCLUDE_DIRECTORIES (
	${ASSIMP_INCLUDE_DIR}
	${GLFW3_INCLUDE_DIR}
	${ANTTWEAKBAR_INCLUDE_DIR}
	${ANTGRAPHICS_INCLUDE_DIR}
)

ADD_EXECUTABLE (
   ${PROJECT_NAME}
   antApp.h
   antApp.cpp
)

TARGET_LINK_LIBRARIES ( 
  ${PROJECT_NAME}
  ${OPENGL_LIBRARIES} 
  ${ASSIMP_LIBRARY}
  ${GLFW3_LIBRARY}
  ${ANTTWEAKBAR_LIBRARY}
  ${ANTGRAPHICS_LIBRARY}
)

MACRO( CONFIG_PROJECT PROJNAME LIBNAME )
    INCLUDE_DIRECTORIES( ${${LIBNAME}_INDLUDE_DIR} )
    TARGET_LINK_LIBRARIES( ${PROJNAME} ${${LIBNAME}_LIBRARY} )
ENDMACRO()

SET( EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin )


